Fix nested alignfull block styles

--- a/scss/layout/_article.scss
+++ b/scss/layout/_article.scss
@@ -22,6 +22,11 @@
 		max-width: none;
 		margin-left: calc(-1 * var(--container-padding));
 		margin-right: calc(-1 * var(--container-padding));
+
+		.alignfull {
+			margin-left: 0;
+			margin-right: 0;
+		}
 	}
 
 	.alignwide, .alignfull {
