--- a/scss/style-editor.scss
+++ b/scss/style-editor.scss
@@ -15,9 +15,14 @@
 	padding-left: var(--container-padding);
 	padding-right: var(--container-padding);
 
-	.wp-block.alignfull {
+	.alignfull {
 		margin-left: calc(-1 * var(--container-padding));
 		margin-right: calc(-1 * var(--container-padding));
+
+		.alignfull {
+			margin-left: 0;
+			margin-right: 0;
+		}
 	}
 
 	& > * {
